# planning_1_0

./: .gitignore  CMakeLists.txt  README.md  planning.pc.in
include/planning/: planning_interface.h
sample/: CMakeLists.txt  main.cpp  package.xml
sample/launch/: planning_sample.launch
src/: planning_component.cpp  planning_component.h
src/common/: CMakeLists.txt  box2d.cpp  box2d.h  cartesian_frenet_conversion.cpp  cartesian_frenet_conversion.h  common.cpp  common.h  geodetic_conv.hpp  json_parser.cpp  json_parser.h  lane_line.cpp  lane_line.h  line_segment2d.cpp  line_segment2d.h  obstacle.cpp  obstacle.h  obstacle_container.cpp  obstacle_container.h  polygon2d.cpp  polygon2d.h  qpoases_solver.cpp  qpoases_solver.h  quintic_polynomial_curve.cpp  quintic_polynomial_curve.h  speed_data.cpp  speed_data.h  st_boundary.cpp  st_boundary.h  vec2d.cpp  vec2d.h  virtual_obs.cpp  virtual_obs.h
src/decider/: CMakeLists.txt  decider.cpp  decider.h  decider_config.h  lane_borrow_decider.cpp  lane_borrow_decider.h  lane_change_decider.cpp  lane_change_decider.h  lateral_obstacle_decider.cpp  lateral_obstacle_decider.h  path_bounds_decider.cpp  path_bounds_decider.h
src/emplanner/: CMakeLists.txt  emplanner.cpp  emplanner.h  planner_interface.h
src/emplanner/path_optimizer/: dp_curve_cost.cpp  dp_curve_cost.h  dp_path_map_node.h  dp_path_optimizer.cpp  dp_path_optimizer.h  qp_path_optimizer.cpp  qp_path_optimizer.h
src/emplanner/speed_optimizer/: discretized_path.cpp  discretized_path.h  dp_speed_optimizer.cpp  dp_speed_optimizer.h  dp_st_graph.cpp  dp_st_graph.h  qp_speed_optimizer.cpp  qp_speed_optimizer.h  st_boundary_mapper.cpp  st_boundary_mapper.h  st_graph_point.cpp  st_graph_point.h  st_point.cpp  st_point.h
src/lane/: CMakeLists.txt  lane.cpp  lane.h
src/local_path_generator/: CMakeLists.txt  center_line_generator.cpp  center_line_generator.h  local_path_common.cpp  local_path_common.h  local_path_generator.cpp  local_path_generator.h
src/local_path_generator/State/: AwayJunction.cpp  AwayJunction.h  InterJunction.cpp  InterJunction.h  LaneFollow.cpp  LaneFollow.h  OnJunction.cpp  OnJunction.h
src/prediction/: CMakeLists.txt  obstacle_prediction.cpp  obstacle_prediction.h  runge_kutta.cpp  runge_kutta.h
src/reference_line/: CMakeLists.txt  reference_line.cpp  reference_line.h
src/reference_line_smooth/: CMakeLists.txt  reference_line_smooth.cpp  reference_line_smooth.h  smooth_qp_solver.cpp  smooth_qp_solver.h
src/resource/planning_conf/: planning_conf.json  qidi_demo_en.json
src/resource/rtk_trajectory/: big_curvature.json  bizhang.json  center_park.json  center_park_1019.json  college.json  continuousSturn.json  continuousSturn1.json  demo_left.json  demo_line_26.json  demo_line_30.json  demo_line_35.json  demo_line_40.json  demo_line_40s.json  demo_right.json  fengbi_cross1.json  fengbi_left_test.json  left_lane.json  left_reference_line.json  left_reference_line_old.json  line_straght.json  obs_overtake.json  obs_test1.json  obs_test2.json  obstacle_line.json  obstaclebypassing.json  qidi_city_demo_3_0.json  qidi_city_demo_3_1.json  qidi_city_demo_dd.json  qidi_city_demo_new.json  qidi_city_demo_right.json  qidi_straght_line.json  qidi_tmp.json  reference_line.json  right_lane.json  s_2.json  s_20.json  s_3.json  s_4.json  s_5.json  speed_test.json  (+8 more)
src/routing/: CMakeLists.txt  routing.cpp  routing.h
src/rtk_generator/: CMakeLists.txt  obstacle_sim.cpp  obstacle_sim.h  rtk_generator.cpp  rtk_generator.h
src/traffic_light/: CMakeLists.txt  traffic_light.cpp  traffic_light.h  traffic_light_machine.cpp  traffic_light_machine.h
